@@ -38,6 +38,7 @@ $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['scheduler']['tasks']['tx_nkwgok_conve
 	'extension'        => $_EXTKEY,
 	'title'            => 'LLL:EXT:' . $_EXTKEY . '/locallang.xml:scheduler.convertCSV.name',
 	'description'      => 'LLL:EXT:' . $_EXTKEY . '/locallang.xml:scheduler.convertCSV.description',
+	'additionalFields' => 'tx_nkwgok_scheduler_convertcsvadditionalparameters'
 );
 
 // Scheduler task for importing GOK XML files into Typo3 database.
