@@ -11,6 +11,7 @@
 
 			<label index="scheduler.convertCSV.name">2: Convert CSV-files to XML</label>
 			<label index="scheduler.convertCSV.description">Converts CSV files in fileadmin/gok/csv/ with subject tree information to Pica-XML which can be imported to the database.</label>
+			<label index="scheduler.convertCSV.startPageId">Add the page ID where your root TypoScript is inserted (usually 1)</label>
 
 			<label index="scheduler.loadxml.name">3: Import GOK XML</label>
 			<label index="scheduler.loadxml.description">Imports Pica-XML files in fileadmin/gok/xml/ with subject tree information into the TYPO3 database.</label>
@@ -28,6 +29,7 @@
 			
 			<label index="scheduler.convertCSV.name">2: CSV Dateien zu XML konvertieren</label>
 			<label index="scheduler.convertCSV.description">Konvertiert CSV Dateien mit GOK Informationen in fileadmin/gok/csv/ zu Pica-XML Dateien in fileadmin/gok/xml, die in die Datenbank importiert werden können.</label>
+			<label index="scheduler.convertCSV.startPageId">Seiten ID, in der das Haupt-TypoScript eingebunden ist (meistens 1)</label>
 
 			<label index="scheduler.loadxml.name">3: GOK XML Dateien importieren</label>
 			<label index="scheduler.loadxml.description">Importiert GOK Pica-XML Dateien in fileadmin/gok/xml/ in die Typo3-Datenbank.</label>
